saveing ETL Notebook complete

--- a/ETL Pipeline Preparation.ipynb
+++ b/ETL Pipeline Preparation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "4  12  related-1;request-0;offer-0;aid_related-0;medi..."
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "4  related-1;request-0;offer-0;aid_related-0;medi...  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  12  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1431,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,236 +1463,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# drop duplicates\n",
-    "df_1.drop_duplicates(keep = \"first\", inplace = True)"
+    "df_1.drop(\"id\", axis =1,inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>message</th>\n",
-       "      <th>original</th>\n",
-       "      <th>genre</th>\n",
-       "      <th>id</th>\n",
-       "      <th>related</th>\n",
-       "      <th>request</th>\n",
-       "      <th>offer</th>\n",
-       "      <th>aid_related</th>\n",
-       "      <th>medical_help</th>\n",
-       "      <th>...</th>\n",
-       "      <th>aid_centers</th>\n",
-       "      <th>other_infrastructure</th>\n",
-       "      <th>weather_related</th>\n",
-       "      <th>floods</th>\n",
-       "      <th>storm</th>\n",
-       "      <th>fire</th>\n",
-       "      <th>earthquake</th>\n",
-       "      <th>cold</th>\n",
-       "      <th>other_weather</th>\n",
-       "      <th>direct_report</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Weather update - a cold front from Cuba that c...</td>\n",
-       "      <td>Un front froid se retrouve sur Cuba ce matin. ...</td>\n",
-       "      <td>direct</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Is the Hurricane over or is it not over</td>\n",
-       "      <td>Cyclone nan fini osinon li pa fini</td>\n",
-       "      <td>direct</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Looking for someone but no name</td>\n",
-       "      <td>Patnm, di Maryani relem pou li banm nouvel li ...</td>\n",
-       "      <td>direct</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>9</td>\n",
-       "      <td>UN reports Leogane 80-90 destroyed. Only Hospi...</td>\n",
-       "      <td>UN reports Leogane 80-90 destroyed. Only Hospi...</td>\n",
-       "      <td>direct</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12</td>\n",
-       "      <td>says: west side of Haiti, rest of the country ...</td>\n",
-       "      <td>facade ouest d Haiti et le reste du pays aujou...</td>\n",
-       "      <td>direct</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 41 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id                                            message  \\\n",
-       "0   2  Weather update - a cold front from Cuba that c...   \n",
-       "1   7            Is the Hurricane over or is it not over   \n",
-       "2   8                    Looking for someone but no name   \n",
-       "3   9  UN reports Leogane 80-90 destroyed. Only Hospi...   \n",
-       "4  12  says: west side of Haiti, rest of the country ...   \n",
-       "\n",
-       "                                            original   genre  id  related  \\\n",
-       "0  Un front froid se retrouve sur Cuba ce matin. ...  direct   2        1   \n",
-       "1                 Cyclone nan fini osinon li pa fini  direct   7        1   \n",
-       "2  Patnm, di Maryani relem pou li banm nouvel li ...  direct   8        1   \n",
-       "3  UN reports Leogane 80-90 destroyed. Only Hospi...  direct   9        1   \n",
-       "4  facade ouest d Haiti et le reste du pays aujou...  direct  12        1   \n",
-       "\n",
-       "   request  offer  aid_related  medical_help      ...        aid_centers  \\\n",
-       "0        0      0            0             0      ...                  0   \n",
-       "1        0      0            1             0      ...                  0   \n",
-       "2        0      0            0             0      ...                  0   \n",
-       "3        1      0            1             0      ...                  0   \n",
-       "4        0      0            0             0      ...                  0   \n",
-       "\n",
-       "   other_infrastructure  weather_related  floods  storm  fire  earthquake  \\\n",
-       "0                     0                0       0      0     0           0   \n",
-       "1                     0                1       0      1     0           0   \n",
-       "2                     0                0       0      0     0           0   \n",
-       "3                     0                0       0      0     0           0   \n",
-       "4                     0                0       0      0     0           0   \n",
-       "\n",
-       "   cold  other_weather  direct_report  \n",
-       "0     0              0              0  \n",
-       "1     0              0              0  \n",
-       "2     0              0              0  \n",
-       "3     0              0              0  \n",
-       "4     0              0              0  \n",
-       "\n",
-       "[5 rows x 41 columns]"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# check number of duplicates\n",
-    "df_1.head()"
+    "df_1[\"id\"] = messages.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1.he"
    ]
   },
   {
@@ -1705,12 +1500,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "engine = create_engine('sqlite:///DisasterResponse.db')\n",
-    "df.to_sql('Disaster Response', engine, index=False)"
+    "df.to_sql('Disaster_Response', engine, index=False)"
    ]
   },
   {
@@ -1745,7 +1540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
