--- a/ETL Pipeline Preparation.ipynb
+++ b/ETL Pipeline Preparation.ipynb
@@ -1483,11 +1483,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>message</th>\n",
+       "      <th>original</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>related</th>\n",
+       "      <th>request</th>\n",
+       "      <th>offer</th>\n",
+       "      <th>aid_related</th>\n",
+       "      <th>medical_help</th>\n",
+       "      <th>medical_products</th>\n",
+       "      <th>search_and_rescue</th>\n",
+       "      <th>...</th>\n",
+       "      <th>other_infrastructure</th>\n",
+       "      <th>weather_related</th>\n",
+       "      <th>floods</th>\n",
+       "      <th>storm</th>\n",
+       "      <th>fire</th>\n",
+       "      <th>earthquake</th>\n",
+       "      <th>cold</th>\n",
+       "      <th>other_weather</th>\n",
+       "      <th>direct_report</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Weather update - a cold front from Cuba that c...</td>\n",
+       "      <td>Un front froid se retrouve sur Cuba ce matin. ...</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Is the Hurricane over or is it not over</td>\n",
+       "      <td>Cyclone nan fini osinon li pa fini</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Looking for someone but no name</td>\n",
+       "      <td>Patnm, di Maryani relem pou li banm nouvel li ...</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>UN reports Leogane 80-90 destroyed. Only Hospi...</td>\n",
+       "      <td>UN reports Leogane 80-90 destroyed. Only Hospi...</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>says: west side of Haiti, rest of the country ...</td>\n",
+       "      <td>facade ouest d Haiti et le reste du pays aujou...</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 40 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             message  \\\n",
+       "0  Weather update - a cold front from Cuba that c...   \n",
+       "1            Is the Hurricane over or is it not over   \n",
+       "2                    Looking for someone but no name   \n",
+       "3  UN reports Leogane 80-90 destroyed. Only Hospi...   \n",
+       "4  says: west side of Haiti, rest of the country ...   \n",
+       "\n",
+       "                                            original   genre  related  \\\n",
+       "0  Un front froid se retrouve sur Cuba ce matin. ...  direct        1   \n",
+       "1                 Cyclone nan fini osinon li pa fini  direct        1   \n",
+       "2  Patnm, di Maryani relem pou li banm nouvel li ...  direct        1   \n",
+       "3  UN reports Leogane 80-90 destroyed. Only Hospi...  direct        1   \n",
+       "4  facade ouest d Haiti et le reste du pays aujou...  direct        1   \n",
+       "\n",
+       "   request  offer  aid_related  medical_help  medical_products  \\\n",
+       "0        0      0            0             0                 0   \n",
+       "1        0      0            1             0                 0   \n",
+       "2        0      0            0             0                 0   \n",
+       "3        1      0            1             0                 1   \n",
+       "4        0      0            0             0                 0   \n",
+       "\n",
+       "   search_and_rescue ...  other_infrastructure  weather_related  floods  \\\n",
+       "0                  0 ...                     0                0       0   \n",
+       "1                  0 ...                     0                1       0   \n",
+       "2                  0 ...                     0                0       0   \n",
+       "3                  0 ...                     0                0       0   \n",
+       "4                  0 ...                     0                0       0   \n",
+       "\n",
+       "   storm  fire  earthquake  cold  other_weather  direct_report  id  \n",
+       "0      0     0           0     0              0              0   2  \n",
+       "1      1     0           0     0              0              0   7  \n",
+       "2      0     0           0     0              0              0   8  \n",
+       "3      0     0           0     0              0              0   9  \n",
+       "4      0     0           0     0              0              0  12  \n",
+       "\n",
+       "[5 rows x 40 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_1.he"
+    "df_1.head()"
    ]
   },
   {
