ETL Notebook complete - DB load error fixed using df_1

--- a/ETL Pipeline Preparation.ipynb
+++ b/ETL Pipeline Preparation.ipynb
@@ -1714,12 +1714,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "engine = create_engine('sqlite:///DisasterResponse.db')\n",
-    "df.to_sql('Disaster_Response', engine, index=False)"
+    "df_1.to_sql('Disaster_Response', engine, index=False, chunksize = 500)"
    ]
   },
   {
